--- a/templates/products_list.html
+++ b/templates/products_list.html
@@ -32,33 +32,33 @@
 
 <!-- Scrollable table wrapper -->
 <div class="border rounded">
-  <div class="table-responsive" style="max-height:60vh; overflow:auto;">
-    <table class="table table-bordered table-striped table-hover align-middle mb-0">
-      <thead class="table-primary" style="position: sticky; top: 0; z-index: 1;">
+  <div class="table-responsive  tiny-scrollbar" style="max-height:60vh; overflow:auto;">
+    <table class="table table-bordered border-secondary-emhasis table-striped table-hover align-middle mb-0">
+      <thead class="table-primary text-uppercase text-nowrap" style="position: sticky; top: 0; z-index: 1;">
         <tr>
-          <th style="width:60px">#</th>
-          <th style="min-width:120px">Kod</th>
-          <th style="min-width:220px">Nomi</th>
-          <th style="min-width:140px">Kirish narxi</th>
-          <th style="min-width:140px">Sotish narxi</th>
-          <th style="min-width:160px">Kim qo'shdi</th>
-          <th style="min-width:160px">Qo'shilgan</th>
-          <th style="min-width:160px">Yangilangan</th>
-          <th style="min-width:120px">Harakatlar</th>
+          <th>№</th>
+          <th scope="col">Kod</th>
+          <th scope="col">Nomi</th>
+          <th scope="col">Kirish narxi</th>
+          <th scope="col">Sotish narxi</th>
+          <th scope="col">Kim qo'shdi</th>
+          <th scope="col">Qo'shilgan</th>
+          <th scope="col">Yangilangan</th>
+          <th scope="col">Harakatlar</th>
         </tr>
       </thead>
-      <tbody>
+      <tbody  class="text-center center-align text-nowrap" style="font-size:15px;">
         {% for p in page_obj.object_list %}
         <tr>
-          <td>{{ forloop.counter0|add:page_obj.start_index }}</td>
-          <td><code>{{ p.meat_code }}</code></td>
-          <td>{{ p.meat_name }}</td>
-          <td>{{ p.meat_in_price|intcomma }}</td>
-          <td>{{ p.meat_sell_price|intcomma }}</td>
-          <td>{{ p.create_user.username }}</td>
-          <td>{{ p.created_at|date:"Y-m-d H:i" }}</td>
-          <td>{{ p.updated_at|date:"Y-m-d H:i" }}</td>
-          <td>
+          <td  class="text-primary-emphasis ">{{ forloop.counter0|add:page_obj.start_index }}</td>
+          <td  class="text-primary-emphasis "><code>{{ p.meat_code }}</code></td>
+          <td  class="text-primary-emphasis ">{{ p.meat_name }}</td>
+          <td  class="text-primary-emphasis ">{{ p.meat_in_price|intcomma }}</td>
+          <td  class="text-primary-emphasis ">{{ p.meat_sell_price|intcomma }}</td>
+          <td  class="text-primary-emphasis ">{{ p.create_user.username }}</td>
+          <td  class="text-primary-emphasis ">{{ p.created_at|date:"Y-m-d H:i" }}</td>
+          <td  class="text-primary-emphasis ">{{ p.updated_at|date:"Y-m-d H:i" }}</td>
+          <td  class="text-primary-emphasis ">
             {% if request.user == p.create_user %}
                 <!-- Edit tugma -->
                 <button class="btn btn-sm btn-outline-primary"
